# IslamicResearchHub

./: .gitignore  CHANGELOG.md  Open Islamic Research Hub.bat  PROJECT.md  PROJECT_REVIEW.md  README.md  claude.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/staging/jibreel_desktop/: 10.mjbz  100.mjbz  1000.mjbz  1001.mjbz  1002.mjbz  1003.mjbz  1004.mjbz  1005.mjbz  1006.mjbz  1007.mjbz  1008.mjbz  1009.mjbz  101.mjbz  1010.mjbz  1011.mjbz  1012.mjbz  1013.mjbz  1014.mjbz  1015.mjbz  1016.mjbz  1017.mjbz  1018.mjbz  1019.mjbz  102.mjbz  1020.mjbz
src/islamic_research_hub/: __init__.py  __main__.py
src/islamic_research_hub/application/: __init__.py  book_search.py  hybrid_search.py  (+8 more)
tests/: __init__.py  test_book_library_exporter.py  test_book_search.py  test_database_backup.py  test_database_backup_cli.py  test_database_verifier.py  test_duplicate_candidate_repository.py  test_hybrid_search.py  test_hybrid_search_cli.py  test_jibreel_desktop_import.py  test_jibreel_desktop_import_cli.py  test_library_analyzer.py  test_maknoon_import_cli.py  test_maknoon_text_reader.py  test_master_book_repository.py  test_migrate_database_cli.py  test_migration_runner.py  test_mjbz_book_reader.py  test_mjbz_folder_scanner.py  test_mjbz_inspection.py  test_page_embedding.py  test_pdf_metadata_import_cli.py  test_pdf_metadata_reader.py  test_search_cli.py  test_semantic_book_search.py  test_sqlite_book_search_repository.py  test_sqlite_page_embedding_repository.py  test_title_cleanup.py  test_title_cleanup_cli.py  test_verify_database_cli.py  test_web_app.py
(+51 files in other folders)
